--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,19 @@
 <!-- views/partials/header.ejs -->
-<a href="/" class="logo">
-	<div class="logo-img"></div>
-	<h1 class="logo-text">// <%= data.name %>
-		<br />// <%= data.role %> </h1>
-</a>
+<!doctype html>
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+	<!--<![endif]-->
+	<head>
+		<% include ../partials/head %>
+	</head>
+	<body>
+		<header class="container">
+			<a href="/" class="logo">
+				<div class="logo-img"></div>
+				<h1 class="logo-text">// <%= data.name %>
+					<br />// <%= data.role %> </h1>
+			</a>
+		</header>
