doing some styling and layout changes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -318,6 +318,7 @@ body {
     font-size: 10px;
     line-height: 1;
     font-weight: normal;
+    border-top: 20px solid #171717;
 }
 
 .container {
@@ -339,6 +340,10 @@ header {
     overflow: hidden;
 }
 
+header.container {
+    border-bottom: 1px solid #ccc;
+}
+
 .logo {
     width: 70%;
     position: relative;
@@ -351,9 +356,23 @@ header {
     position: relative;
     display: block;
     float: left;
+    width: 100px;
+    text-align: center;
+    padding: 30px 0;
+    font-family: 'Consolas', monospace;
+    text-align: center;
+    background: #171717;
+    font-size: 20px;
+    line-height: 1;
+    color: #fff;
+}
+
+.portrait {
+    position: relative;
+    display: block;
+    float: left;
     height: 100px;
     width: 100px;
-    border-radius: 60px;
     background-image: url(../img/jpg/me.jpg);
     background-repeat: no-repeat;
     background-position: 40% 10%;
@@ -361,9 +380,10 @@ header {
     -webkit-transition: all 0.3s cubic-bezier(0.680, -0.550, 0.265, 1.550);
     -moz-transition: all 0.3s cubic-bezier(0.680, -0.550, 0.265, 1.550);
     transition: all 0.3s cubic-bezier(0.680, -0.550, 0.265, 1.550);
+    margin-right: 2%;
 }
 
-.logo-img:hover {
+.portrait:hover {
     -webkit-transform: scale(1.25) rotate(-10deg);
     -moz-transform: scale(1.25) rotate(-10deg);
     transform: scale(1.25) rotate(-10deg);
@@ -381,6 +401,19 @@ header {
     margin: 0;
     text-decoration: none;
     left: 100px;
+    font-family: 'adobe caslon pro', 'adobe caslon', serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #000;
+    letter-spacing: 6px;
+}
+
+.logo-text .role {
+    font-family: "Consolas", monospace;
+    text-transform: uppercase;
+    color: #696969;
+    font-size: 16px;
+    letter-spacing: 0;
 }
 
 .links img {
@@ -396,7 +429,7 @@ header {
 .links a,
 .links a:visited,
 .links a:active {
-    color: #ab2423;
+    color: #222;
     -webkit-transition: all 0.2s linear;
     -moz-transition: all 0.2s linear;
     transition: all 0.2s linear;
@@ -404,8 +437,7 @@ header {
     height: 65px;
     margin: 0 3.5%;
     padding: 15px;
-    border-radius: 100%;
-    background-color: #000;
+    background-color: #222;
     float: left;
     position: relative;
     text-align: center;
@@ -417,6 +449,7 @@ header {
 
 .links a:hover {
     background-color: #ab2423;
+    color: #ab2423;
 }
 
 .links span {
@@ -453,9 +486,6 @@ p.available {
     background: #333;
     color: #00ff00;
     font-weight: 700;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
 }
 
 p.not_available {
@@ -463,9 +493,6 @@ p.not_available {
     background: #333;
     color: #ff0000;
     font-weight: 700;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
 }
 
 footer {
@@ -584,7 +611,7 @@ h2 {
         display: block;
         clear: both;
         width: 100%;
-        POSITION: relative;
+        position: relative;
         top: 0;
         transform: none;
         left: 0;
