--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-	<p class="container elevator_speach"><%= data.elevator_speach %></p>
+	<p class="container elevator_speach"><span class="portrait"></span><%= data.elevator_speach %></p>
 	<div class="container links">
 		<a href="https://github.com/kylemoses" target="_blank" title="check me out on GitHub">
 			<img src="img/svg/github.svg" alt="GitHub Octo-cat icon" /><span>GitHub</span>
