--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,8 +12,8 @@
 	<body>
 		<header class="container">
 			<a href="/" class="logo">
-				<div class="logo-img"></div>
-				<h1 class="logo-text">// <%= data.name %>
-					<br />// <%= data.role %> </h1>
+				<div class="logo-img">// K</div>
+				<h1 class="logo-text"><%= data.name %>
+					<br /><span class="role"><%= data.role %></span></h1>
 			</a>
 		</header>
